--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -38,7 +38,14 @@ jobs:
         mysql -e "SET @@GLOBAL.GTID_MODE = ON_PERMISSIVE;" -uroot -proot
         mysql -e "SET @@GLOBAL.GTID_MODE = ON;" -uroot -proot
         mysql -e "PURGE BINARY LOGS BEFORE now();" -uroot -proot
-        
+    
+    - name: Install TiDB
+      run: |
+        curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh
+        source ~/.profile
+        tiup playground $(DB_VERSION) --db 1 --pd 1 --kv 1 &
+        while ! nc -W 1 localhost 4000 | grep -q -P '.+'; do sleep 1; done
+    
     - name: Install Rust target
       run: |
         rustup target add wasm32-wasi
@@ -54,7 +61,14 @@ jobs:
         cargo build --target wasm32-wasi --release
         wasmedgec target/wasm32-wasi/release/crud.wasm crud.wasm
         wasmedge --env "DATABASE_URL=mysql://root:root@127.0.0.1:3306/mysql" crud.wasm
-        
+    
+    - name: TiDB async examples
+      run: |
+        cd mysql_async
+        cargo build --target wasm32-wasi --release
+        wasmedgec target/wasm32-wasi/release/crud.wasm crud.wasm
+        wasmedge --env "DATABASE_URL=mysql://root@127.0.0.1:4000/mysql" crud.wasm
+    
     - name: MySQL simple examples
       run: |
         cd mysql
