--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -26,7 +26,7 @@ jobs:
         sudo ACCEPT_EULA=Y apt-get upgrade
         sudo apt-get install wget git curl software-properties-common build-essential
 
-    - name: Install MySQL
+    - name: Install and run MySQL
       run: |
         sudo apt-get update
         sudo apt-get -y install mysql-server libmysqlclient-dev curl
@@ -39,14 +39,25 @@ jobs:
         mysql -e "SET @@GLOBAL.GTID_MODE = ON;" -uroot -proot
         mysql -e "PURGE BINARY LOGS BEFORE now();" -uroot -proot
     
-    - name: Install TiDB
+    - name: Install and run TiDB
       run: |
         curl --proto '=https' --tlsv1.2 -sSf https://tiup-mirrors.pingcap.com/install.sh | sh
         source ~/.profile
         tiup playground $(DB_VERSION) --db 1 --pd 1 --kv 1 &
         while ! nc -W 1 localhost 4000 | grep -q -P '.+'; do sleep 1; done
     
-    - name: Install Rust target
+    - name: Install Anna KVS and run router
+      run: |
+        git clone https://github.com/essa-project/anna-rs.git
+        cd anna-rs
+        cp example-config.yml config.yml
+        ANNA_PUBLIC_IP=127.0.0.1 ANNA_TCP_PORT_BASE=12340 nohup cargo run --bin routing -- config.yml &
+
+    - name: Run Anna KVS
+      run: |
+        ANNA_PUBLIC_IP=127.0.0.1 nohup cargo run --bin kvs -- config.yml &
+
+    - name: Install Rust target for wasm
       run: |
         rustup target add wasm32-wasi
 
