--- a/mysql_async/Cargo.toml
+++ b/mysql_async/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-mysql_async_wasi = {git="https://github.com/WasmEdge/mysql_async_wasi.git"}
-tokio = { git="https://github.com/WasmEdge/tokio.git", version = "1", features = [ "io-util", "fs", "net", "time", "rt", "macros"] }
+mysql_async_wasi = "0.30"
+tokio_wasi = { version = "1", features = [ "io-util", "fs", "net", "time", "rt", "macros"] }
