--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -73,7 +73,7 @@ jobs:
         cargo build --target wasm32-wasi --release
         wasmedgec target/wasm32-wasi/release/query.wasm query.wasm
         wasmedgec target/wasm32-wasi/release/insert.wasm insert.wasm
-        resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@localhost:3306/mysql" query.wasm 2>&1)
+        resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@127.0.0.1:3306/mysql" query.wasm 2>&1)
         echo "$resp"
         if [[ $resp == *"localhost"* ]]; then
           echo -e "Execution Success!"
@@ -81,7 +81,7 @@ jobs:
           echo -e "Execution Fail!"
           exit 1
         fi
-        resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@localhost:3306/mysql" insert.wasm 2>&1)
+        resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@127.0.0.1:3306/mysql" insert.wasm 2>&1)
         echo "$resp"
         if [[ $resp == *"foo"* ]]; then
           echo -e "Execution Success!"
@@ -109,7 +109,7 @@ jobs:
         cd mysql_async
         cargo build --target wasm32-wasi --release
         wasmedgec target/wasm32-wasi/release/crud.wasm crud.wasm
-        resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@127.0.0.1:3306/mysql" crud.wasm 2>&1)
+        resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@localhost:3306/mysql" crud.wasm 2>&1)
         echo "$resp"
         if [[ $resp == *"Bobcat"* ]]; then
           echo -e "Execution Success!"
