--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -71,8 +71,10 @@ jobs:
       run: |
         cd mysql
         cargo build --target wasm32-wasi --release
-        wasmedgec target/wasm32-wasi/release/query.wasm query.wasm
-        wasmedgec target/wasm32-wasi/release/insert.wasm insert.wasm
+        # wasmedgec target/wasm32-wasi/release/query.wasm query.wasm
+        # wasmedgec target/wasm32-wasi/release/insert.wasm insert.wasm
+        cp target/wasm32-wasi/release/query.wasm query.wasm
+        cp target/wasm32-wasi/release/insert.wasm insert.wasm
         resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@127.0.0.1:3306/mysql" query.wasm 2>&1)
         echo "$resp"
         if [[ $resp == *"localhost"* ]]; then
@@ -94,7 +96,8 @@ jobs:
       run: |
         cd anna
         cargo build --target wasm32-wasi --release
-        wasmedgec target/wasm32-wasi/release/putget.wasm putget.wasm
+        # wasmedgec target/wasm32-wasi/release/putget.wasm putget.wasm
+        cp target/wasm32-wasi/release/putget.wasm putget.wasm
         resp=$(wasmedge putget.wasm 2>&1)
         echo "$resp"
         if [[ $resp == *"UTC"* ]]; then
@@ -108,7 +111,8 @@ jobs:
       run: |
         cd mysql_async
         cargo build --target wasm32-wasi --release
-        wasmedgec target/wasm32-wasi/release/crud.wasm crud.wasm
+        # wasmedgec target/wasm32-wasi/release/crud.wasm crud.wasm
+        cp target/wasm32-wasi/release/crud.wasm crud.wasm
         resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@localhost:3306/mysql" crud.wasm 2>&1)
         echo "$resp"
         if [[ $resp == *"Bobcat"* ]]; then
@@ -122,7 +126,8 @@ jobs:
       run: |
         cd mysql_async
         cargo build --target wasm32-wasi --release
-        wasmedgec target/wasm32-wasi/release/crud.wasm crud.wasm
+        # wasmedgec target/wasm32-wasi/release/crud.wasm crud.wasm
+        cp target/wasm32-wasi/release/crud.wasm crud.wasm
         resp=$(wasmedge --env "DATABASE_URL=mysql://root@127.0.0.1:4000/mysql" crud.wasm 2>&1)
         echo "$resp"
         if [[ $resp == *"Bobcat"* ]]; then
