--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -95,28 +95,28 @@ jobs:
           exit 1
         fi
     
-#    - name: MySQL simple examples
-#      run: |
-#        cd mysql
-#        cargo build --target wasm32-wasi --release
-#        wasmedgec target/wasm32-wasi/release/query.wasm query.wasm
-#        wasmedgec target/wasm32-wasi/release/insert.wasm insert.wasm
-#        resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@127.0.0.1:3306/mysql" query.wasm 2>&1)
-#        echo "$resp"
-#        if [[ $resp == *"localhost"* ]]; then
-#          echo -e "Execution Success!"
-#        else
-#          echo -e "Execution Fail!"
-#          exit 1
-#        fi
-#        resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@127.0.0.1:3306/mysql" insert.wasm 2>&1)
-#        echo "$resp"
-#        if [[ $resp == *"foo"* ]]; then
-#          echo -e "Execution Success!"
-#        else
-#          echo -e "Execution Fail!"
-#          exit 1
-#        fi
+    - name: MySQL simple examples
+      run: |
+        cd mysql
+        cargo build --target wasm32-wasi --release
+        wasmedgec target/wasm32-wasi/release/query.wasm query.wasm
+        wasmedgec target/wasm32-wasi/release/insert.wasm insert.wasm
+        resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@127.0.0.1:3306/mysql" query.wasm 2>&1)
+        echo "$resp"
+        if [[ $resp == *"localhost"* ]]; then
+          echo -e "Execution Success!"
+        else
+          echo -e "Execution Fail!"
+          exit 1
+        fi
+        resp=$(wasmedge --env "DATABASE_URL=mysql://root:root@127.0.0.1:3306/mysql" insert.wasm 2>&1)
+        echo "$resp"
+        if [[ $resp == *"foo"* ]]; then
+          echo -e "Execution Success!"
+        else
+          echo -e "Execution Fail!"
+          exit 1
+        fi
 
 #    - name: Anna KVS examples
 #      run: |
