--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -135,7 +135,7 @@ jobs:
         cd redis
         cargo build --target wasm32-wasi --release
         wasmedgec target/wasm32-wasi/release/wasmedge-redis-client-examples.wasm wasmedge-redis-client-examples.wasm
-        resp=$(wasmedge --env "DATABASE_URL=postgres://postgres@localhost/postgres" wasmedge-redis-client-examples.wasm 2>&1)
+        resp=$(wasmedge wasmedge-redis-client-examples.wasm 2>&1)
         echo "$resp"
         if [[ $resp == *"UTC"* ]]; then
           echo -e "Execution Success!"
@@ -144,6 +144,14 @@ jobs:
           exit 1
         fi
     
+    - name: PostgresSQL examples
+      run: |
+        cd postgres
+        cargo build --target wasm32-wasi --release
+        wasmedgec target/wasm32-wasi/release/crud.wasm crud.wasm
+        resp=$(wasmedge --env "DATABASE_URL=postgres://postgres@localhost/postgres" crud.wasm 2>&1)
+        echo "$resp"
+
 #    - name: Anna KVS examples
 #      run: |
 #        cd anna
