--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -59,8 +59,8 @@ jobs:
         # sudo pg_ctlcluster 12 main start
         sudo systemctl start postgresql.service
         sleep 10
-        sudo -u postgres createuser -w wasmedge 
-        sudo -u postgres createdb -O wasmedge testdb
+        sudo createuser -w wasmedge 
+        sudo createdb -O wasmedge testdb
     
     - name: Install Anna KVS and run router
       run: |
