Fix postgres docker
Signed-off-by: Michael Yuan <michael@secondstate.io>

--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -5,15 +5,24 @@ services:
     build:
       context: .
     environment:
-      REDIS_URL: postgres://wasmedge:rocks@db/testdb
+      DATABASE_URL: postgres://wasmedge:rocks@db/testdb
       RUST_BACKTRACE: full
     restart: on-failure
     runtime: io.containerd.wasmedge.v1
+    depends_on:
+      db:
+        condition: service_healthy
   db:
     image: postgres:14.1-alpine
     restart: always
     environment:
       - POSTGRES_USER=wasmedge
       - POSTGRES_PASSWORD=rocks
+      - POSTGRES_DB=testdb
     ports:
       - '5432:5432'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
