--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -77,11 +77,11 @@ jobs:
     - name: Install WasmEdge
       run: |
         VERSION=0.13.5
-        curl -sSf https://raw.githubusercontent.com/WasmEdge/WasmEdge/master/utils/install.sh | sudo bash -s -- --version=$VERSION -p /usr/local
-        wget https://github.com/WasmEdge/WasmEdge/releases/download/0.13.4/WasmEdge-plugin-wasmedge_rustls-0.13.4-ubuntu20.04_x86_64.tar.gz
-        sudo mkdir -p /usr/local/lib/wasmedge
-        tar -zxf WasmEdge-plugin-wasmedge_rustls-*-ubuntu20.04_x86_64.tar.gz
-        sudo mv libwasmedge_rustls.so /usr/local/lib/wasmedge/
+        curl -sSf https://raw.githubusercontent.com/WasmEdge/WasmEdge/master/utils/install.sh | sudo bash -s -- --plugins wasmedge_rustls --version=$VERSION -p /usr/local
+#        wget https://github.com/WasmEdge/WasmEdge/releases/download/0.13.4/WasmEdge-plugin-wasmedge_rustls-0.13.4-ubuntu20.04_x86_64.tar.gz
+#        sudo mkdir -p /usr/local/lib/wasmedge
+#        tar -zxf WasmEdge-plugin-wasmedge_rustls-*-ubuntu20.04_x86_64.tar.gz
+#        sudo mv libwasmedge_rustls.so /usr/local/lib/wasmedge/
         
     - name: MySQL async examples
       run: |
