--- a/greptimedb/Cargo.toml
+++ b/greptimedb/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-mysql_async_wasi = { version = "0.31" }
+mysql_async_wasi = { version = "0.33", features = [ "default-rustls" ] }
 time = "0.3"
 tokio_wasi = { version = "1", features = [ "io-util", "fs", "net", "time", "rt", "macros"] }
