--- a/greptimedb/Cargo.toml
+++ b/greptimedb/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 mysql_async_wasi = { version = "0.33", features = [ "default-rustls" ] }
+zstd-sys = "=2.0.9"
 time = "0.3"
 tokio_wasi = { version = "1", features = [ "io-util", "fs", "net", "time", "rt", "macros"] }
