--- a/greptimedb/Cargo.toml
+++ b/greptimedb/Cargo.toml
@@ -3,8 +3,12 @@ name = "greptimedb"
 version = "0.1.0"
 edition = "2021"
 
+[patch.crates-io]
+tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
+socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
+
 [dependencies]
-mysql_async_wasi = { version = "0.33", features = [ "default-rustls" ] }
+mysql_async = { version = "0.34", default-features=false, features = [ "default-rustls" ], git="https://github.com/blackbeam/mysql_async.git" }
 zstd-sys = "=2.0.9"
 time = "0.3"
-tokio_wasi = { version = "1", features = [ "io-util", "fs", "net", "time", "rt", "macros"] }
+tokio = { version = "1", features = [ "io-util", "fs", "net", "time", "rt", "macros"] }
